force-app/main/default/objects/blng__FinancePeriod__c/fields/blng__Family__c.field-meta.xml
<CustomField>
    <fullName>blng__Family__c</fullName>
    <label>Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>