force-app/main/default/objects/blng__FinancePeriod__c/fields/blng__FinanceBook__c.field-meta.xml
<CustomField>
    <fullName>blng__FinanceBook__c</fullName>
    <label>Finance Book</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>blng__FinanceBook__c.blng__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>blng__FinanceBook__c</referenceTo>
    <relationshipLabel>Finance Periods</relationshipLabel>
    <relationshipName>FinancePeriods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>