force-app/main/default/objects/blng__FinancePeriod__c/fields/blng__FinancePeriodFamily__c.field-meta.xml
<CustomField>
    <fullName>blng__FinancePeriodFamily__c</fullName>
    <externalId>true</externalId>
    <label>Finance Period Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>