force-app/main/default/objects/blng__FinancePeriod__c/fields/blng__LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>blng__LegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of legal entity associated with this finance period</inlineHelpText>
    <label>Finance Period Legal Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>blng__LegalEntity__c.blng__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Finance Periods</relationshipLabel>
    <relationshipName>FinancePeriods</relationshipName>
    <type>Lookup</type>
</CustomField>