force-app/main/default/objects/blng__FinancePeriod__c/fields/blng__NextOpenPeriod__c.field-meta.xml
<CustomField>
    <fullName>blng__NextOpenPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Next Open Period</label>
    <type>Checkbox</type>
</CustomField>