force-app/main/default/objects/blng__FinancePeriod__c/fields/blng__PeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>blng__PeriodStartDate__c</fullName>
    <inlineHelpText>Select the beginning of the finance period.</inlineHelpText>
    <label>Period Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>