force-app/main/default/objects/blng__FinancePeriod__c/fields/blng__PeriodStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__PeriodStatus__c</fullName>
    <inlineHelpText>Select Open to capture all transactions or Closed to prevent further transactions.</inlineHelpText>
    <label>Period Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__FinancialPeriodStatus</valueSetName>
    </valueSet>
</CustomField>