force-app/main/default/objects/blng__FinancePeriod__c/fields/blng__ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>blng__ReferenceId__c</fullName>
    <externalId>true</externalId>
    <label>Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>